fix and added a Documenation
